# rolldice

./: LICENSE  README.md  rolldice.cabal
app/: Main.hs
src/: Dice.hs
