cabal-version:      3.0
name:               rolldice
version:            1.0.0.0
license:            MIT
license-file:       LICENSE
author:             Jan
maintainer:         gitjaheje@mailbox.org
category:           Game
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wincomplete-uni-patterns -Wno-type-defaults -Wno-unused-imports -Wno-unused-matches

library
    import:           warnings
    exposed-modules:  Dice
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
                     ,random
    hs-source-dirs:   src
    default-language: Haskell2010

executable rolldice
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        rolldice,
        random,
        parsec

    hs-source-dirs:   app
    default-language: Haskell2010
